discussion/kv_engine/183329/183329_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add QuotaSharingItemPager

Added a new subclass of ItemPager which evicts items from a set of
buckets and stops eviction when sum(mem_used) < sum(low_wat).

Changed the ItemPager factory method to return an instance of the
QuotaSharingItemPager which is shared between quota sharing
configurations.

The QuotaSharingItemPager's schedulePagingVisitors implementation uses
the CrossBucketVisitorAdapter to schedule paging visitors for all
buckets sharing HT quotas.

The adapter round-robins which bucket's paging visitor gets to run.
This is done to avoid evicting more items from buckets which have more
items resident below the MFU eviction threshold (HTs more densely
populated with such items, which would be faster to evict from if we
were just running the visitors concurrently without syncronisation).

Change-Id: I5c285db14e438cf159cde181de91b838549b706a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-12-09 17:13:55.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-09 19:07:07.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22146/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:249:46: error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
    std::size_t estimatedTotalMemUsed = std::accumulate(
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.h:48:39: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual std::chrono::microseconds maxExpectedDuration() const override;
    ~~~~~~~~                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.h:54:28: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual EvictionRatios getEvictionRatios(
    ~~~~~~~~               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22146/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:249:46:
error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22146/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51445/ : FAILURE

Failure of GoogleTest "MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc_Durability/Metered":

<pre>
[ RUN      ] MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc_Durability/Metered
unknown file: error: C++ exception with description "Failed to create pipe for AtomicNotificationQueue9: bad file descriptor" thrown in SetUp().
[  FAILED  ] MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc_Durability/Metered, where GetParam() = 4-byte object <00-00 00-00> (5 ms)
MeteringTest/MeteringTest.SubdocArrayAddUniquePlainDoc_Durability/Metered
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51445/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43188/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:249:46:
error: no member named "accumulate" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43188/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11863/ : FAILURE

Compile error at [2022-12-09T17:46:04.226Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:249:46:
error: no member named "accumulate" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11863/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/901/ : FAILURE

Compile error at [2022-12-09T17:31:54.868Z] ../kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:24:68:
error: missing braces around initializer for ?std::binary_function<Vbid, Vbid, bool>? [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/901/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24185/ : FAILURE

Compile error at [2022-12-09T17:55:33.694Z] ../kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:24:68:
error: missing braces around initializer for ?std::binary_function<Vbid, Vbid, bool>? [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24185/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24599/ : FAILURE

Compile error at [2022-12-09T18:29:01.165Z] ../kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:24:68:
error: missing braces around initializer for ?std::binary_function<Vbid, Vbid, bool>? [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24599/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11953/ : FAILURE

Compile error at [2022-12-09T18:35:08.278Z] ../kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:24:68:
error: missing braces around initializer for ?std::binary_function<Vbid, Vbid, bool>? [-Werror=missing-braces]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11953/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21713/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23693/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25461/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32605/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
